# crashpad

./: CMakeLists.txt
.github/workflows/: main.yml
client/: CMakeLists.txt  crash_report_database_generic.cc  crashpad_client.h  crashpad_client_linux.cc
compat/: CMakeLists.txt
handler/: CMakeLists.txt  crash_report_upload_thread.cc  crash_report_upload_thread.h  handler_main.cc
handler/linux/: crash_report_exception_handler.cc  crash_report_exception_handler.h
util/: CMakeLists.txt
util/misc/: zlib.cc
util/stream/: file_encoder.cc
